game objects to vector. collision, tiles, top

--- a/RPG-System/RPG/RPG.vcxproj.filters
+++ b/RPG-System/RPG/RPG.vcxproj.filters
@@ -182,14 +182,14 @@
     <ClCompile Include="LocalObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="HeroCharacter.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Dialog.cpp">
       <Filter>Source Files\Scripts</Filter>
     </ClCompile>
     <ClCompile Include="DialogBox.cpp">
       <Filter>Source Files\Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="HeroCharacter.cpp">
+      <Filter>Source Files\GameObject</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
