--- a/RPG-System/RPG/RPG.vcxproj
+++ b/RPG-System/RPG/RPG.vcxproj
@@ -76,6 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Attack.h" />
     <ClInclude Include="Bank.h" />
     <ClInclude Include="ChangeMap.h" />
     <ClInclude Include="Chest.h" />
@@ -85,6 +86,7 @@
     <ClInclude Include="Door.h" />
     <ClInclude Include="EmptyState.h" />
     <ClInclude Include="Control.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Flag.h" />
     <ClInclude Include="GameMenu.h" />
     <ClInclude Include="GameObject.h" />
@@ -138,6 +140,7 @@
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="Scripts.cpp" />
+    <ClCompile Include="Stats.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="UserMovement.cpp" />
     <ClCompile Include="Utility.cpp" />
