--- a/RPG-System/RPG/RPG.vcxproj
+++ b/RPG-System/RPG/RPG.vcxproj
@@ -109,6 +109,7 @@
     <ClInclude Include="NoScript.h" />
     <ClInclude Include="NPC.h" />
     <ClInclude Include="ParamsCtrl.h" />
+    <ClInclude Include="ParamsMap.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="QuestItem.h" />
     <ClInclude Include="RandMovement.h" />
@@ -141,6 +142,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Movement.cpp" />
     <ClCompile Include="NoMovement.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Parser.cpp" />
